# webapp-simple-calculator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: app.py
frontend/: index.html  script.js  style.css
