[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webapp-simple-calculator"
version = "0.1.0"
description = "A simple WebApp Calculator that evaluates mathematical expressions using math-evaluate by mhasanali2010."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Muhammad Hasan", email = "mhasanali2010@gmail.com" }
]
requires-python = ">=3.13"

dependencies = [
    "flask-cors>=6.0.1",
    "flask>=3.1.2"
]

[project.urls]
Homepage = "https://github.com/yourusername/your-repo"
Repository = "https://github.com/yourusername/your-repo"
